object-fit: contain

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="css/info.css">
-	<link rel="stylesheet" href="css/contact.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa&display.." rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<title>Document</title>
@@ -76,97 +74,97 @@
 		</div>
 		<div class="first grid_item">
 			<img class="grid_image" src="images/paramoni.png" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="second grid_item">
 			<img class="grid_image" src="images/1_1.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="third grid_item">
 			<img class="grid_image" src="images/1_3.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fourth grid_item">
 			<img class="grid_image" src="images/1_2.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fifth grid_item">
 			<img class="grid_image" src="images/10.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="sixth grid_item">
 			<img class="grid_image" src="images/gif1.gif" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="seventh grid_item">
 			<img class="grid_image" src="images/9.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="eighth grid_item">
 			<img class="grid_image" src="images/8_2.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="nineth grid_item">
 			<img class="grid_image" src="images/5.1with.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="tenth grid_item">
 			<img class="grid_image" src="images/11.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="eleventh grid_item">
 			<img class="grid_image" src="images/3.1with.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="twelveth grid_item">
 			<img class="grid_image" src="images/4.1with.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="thirteenth grid_item">
 			<img class="grid_image" src="images/2.1with.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fourteenth grid_item">
 			<img class="grid_image" src="images/6.1with.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
 <!--			<img class="grid_image" src="images/" alt="">-->
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="sixteenth grid_item">
 			<img class="grid_image" src="images/12.jpg" alt="">
-			<div class="magnifier_wrap"><img src="images/magnifier.svg" alt=""></div>
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Hello my friend</div></div>
 			<div class="description"></div>
 		</div>
