--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	<div class="popup_bg"></div>
 	<div class="image_popup_wrap">
 		<img src="" alt="" class="popup_main_image">
-		<img src="images/close.svg" style="stroke: rgb(255, 255, 255)" alt="" class="close_button">
+		<img src="images/close.svg" alt="" class="close_button">
 		<div class="abs"><img src="" alt="" class="popup_add_image"></div>
 		<div class="slider"><div class="slider_circle"></div></div>
 	</div>
