--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 			</div>
 			<h3>Образование</h3>
 			<div class="education">
-				Основное <br>
-				Ростовский-на-Дону строительный колледж <br>
-				Архитектура (очно)<br>
-				Донской государственный технический университет<br>
-				Строительство (заочно)<br>
+				Основное <br> <br>
+				Ростовский-на-Дону строительный колледж <br> <br>
+				Архитектура (очно)<br> <br>
+				Донской государственный технический университет<br> <br>
+				Строительство (заочно)<br> <br>
 			</div>
 			<h3 class="addition_header">Дополнительное</h3>
 			<div class="addition">
-				ARHI.TECH - официальный тренинг-центр Autodesk и учебный центр GRAPHISOFT <br>
+				ARHI.TECH - официальный тренинг-центр Autodesk и учебный центр GRAPHISOFT <br> <br>
 				Школа 3D-визуализации Ильи Изотова
 			</div>
 		</div>
@@ -68,92 +68,92 @@
 
 	<div class="grid_container">
 		<div class="buttons_container">
-			<div class="button open_info">About me</div>
-			<div class="button open_contacts">Contacts</div>
-			<div class="button open_work">Work</div>
+			<div class="button open_info">Обо мне</div>
+			<div class="button open_contacts">Контакты</div>
+			<div class="button open_work">Работы</div>
 		</div>
 		<div class="first grid_item">
 			<img class="grid_image" src="images/paramoni.png" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Парк-музей по ул. Береговая в г. Ростове-на-Дону</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="second grid_item">
 			<img class="grid_image" src="images/1_1.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Галерея с постоянной выставкой с постоянной выставкой на базе исторических строений</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="third grid_item">
 			<img class="grid_image" src="images/1_3.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Внутреннее пространство галереи с врменной экспозицией</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fourth grid_item">
 			<img class="grid_image" src="images/1_2.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Галерея с временной экспозицией на базе исторических строений</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fifth grid_item">
 			<img class="grid_image" src="images/10.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="sixth grid_item">
 			<img class="grid_image" src="images/gif1.gif" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Функциональное зонирование мобильными стеклянными перегородками</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="seventh grid_item">
 			<img class="grid_image" src="images/9.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Кухня в стиле минимализма</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="eighth grid_item">
 			<img class="grid_image" src="images/8_2.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Библиотечно-информационный центр им. Островского Н.А. в г. Ростове-на-Дону</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="nineth grid_item">
 			<img class="grid_image" src="images/5.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Интерьер спальни с выходом на балкон</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="tenth grid_item">
 			<img class="grid_image" src="images/11.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="eleventh grid_item">
 			<img class="grid_image" src="images/3.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Кухня в Новой Зеландии</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="twelveth grid_item">
 			<img class="grid_image" src="images/4.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="thirteenth grid_item">
 			<img class="grid_image" src="images/2.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Контрастная кухня с ярким цветовым акцентом</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fourteenth grid_item">
 			<img class="grid_image" src="images/6.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Интерьер с освещением "солнце сквозь облака"</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
@@ -165,7 +165,7 @@
 		<div class="sixteenth grid_item">
 			<img class="grid_image" src="images/12.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
 	</div>
