--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta name="format-detection" content="telephone=no">
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa&display.." rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,7 +24,7 @@
 			</div>
 			<div class="contacts_element">
 				<img class="contacts_image" width="20px" height="20px" src="contactsimages/2.png" alt="">
-				<p class="contacts_text">| WhatsApp: +7 (901) 589-10-97</p>
+				<p class="contacts_text">| WhatsApp: +7(901)589-10-97</p>
 			</div>
 			<div class="contacts_element">
 				<img class="contacts_image" width="20px" height="20px" src="contactsimages/3.png" alt="">
@@ -157,17 +158,17 @@
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
-<!--			<img class="grid_image" src="images/" alt="">-->
-			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Hello my friend</div></div>
-			<div class="description"></div>
-		</div>
-		<div class="sixteenth grid_item">
 			<img class="grid_image" src="images/12.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
+<!--		<div class="sixteenth grid_item">-->
+<!--			<img class="grid_image" src="images/12.jpg" alt="">-->
+<!--			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">-->
+<!--			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>-->
+<!--			<div class="description"></div>-->
+<!--		</div>-->
 	</div>
 
 	<div class="popup_bg"></div>
