add three images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div class="second grid_item">
 			<img class="grid_image" src="images/1_1.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Галерея с постоянной выставкой с постоянной выставкой на базе исторических строений</div></div>
+			<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="third grid_item">
@@ -158,17 +158,29 @@
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
+			<img class="grid_image" src="images/16.jpg" alt="">
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
+			<div class="description"></div>
+		</div>
+		<div class="sixteenth grid_item">
 			<img class="grid_image" src="images/12.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
-<!--		<div class="sixteenth grid_item">-->
-<!--			<img class="grid_image" src="images/12.jpg" alt="">-->
-<!--			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">-->
-<!--			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>-->
-<!--			<div class="description"></div>-->
-<!--		</div>-->
+		<div class="seventeenth grid_item">
+			<img class="grid_image" src="images/18.jpg" alt="">
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
+			<div class="description"></div>
+		</div>
+		<div class="eighteenth grid_item">
+			<img class="grid_image" src="images/7.2.jpg" alt="">
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
+			<div class="description"></div>
+		</div>
 	</div>
 
 	<div class="popup_bg"></div>
