--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
-			<img class="grid_image" src="images/16.jpg" alt="">
+			<img class="grid_image" src="images/8.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
@@ -176,7 +176,7 @@
 			<div class="description"></div>
 		</div>
 		<div class="eighteenth grid_item">
-			<img class="grid_image" src="images/7.2.jpg" alt="">
+			<img class="grid_image" src="images/7.1with.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
