--- a/index.html
+++ b/index.html
@@ -119,7 +119,19 @@
 			<img class="grid_image" src="images/8_2.jpg" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Библиотечно-информационный центр им. Островского Н.А. в г. Ростове-на-Дону</div></div>
-			<div class="description"></div>
+			<div class="description">
+				Интерьер абонемента Библиотечно-информационного центра имени Н.А.Островского в г. Ростове-на-Дону <br>
+				<br>
+				Проектом предлагается создание многофункционального современного пространства, которое будет не только местом хранилища книг, а станет притягательным, просветительским и культурным центром.
+				<br>
+				Конструктивная схема здания состоит из несущих стен и монолитных плит перекрытия. <br>
+				Наружные стены выполнены из кирпича 510мм. <br>
+				Внутренние перегородки выполнены из кирпича толщиной 120мм. <br>
+				<br>
+				Проектируемые помещения имеют ассиметричную форму. В помещениях была выполнена перепланировка для разделения пространства на зоны. Имеются внутренние перегородки, колонны и выступы несущих колонн.
+				<br>
+				<img src="images/8_4.jpg" alt="">
+			</div>
 		</div>
 		<div class="nineth grid_item">
 			<img class="grid_image" src="images/5.1with.jpg" alt="">
@@ -189,7 +201,10 @@
 		<img src="images/close.svg" alt="" class="close_button">
 		<div class="abs"><img src="" alt="" class="popup_add_image"></div>
 		<div class="slider"><div class="slider_circle"></div></div>
+		<div class="image_popup_text"></div>
 	</div>
+	<div class="arrow larrow"><img width="30px" height="30px" src="images/larrow.svg" alt=""></div>
+	<div class="arrow rarrow"><img width="30px" height="30px" src="images/rarrow.svg" alt=""></div>
 </body>
 <script src="js/index.js"></script>
 </html>
