--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Библиотечно-информационный центр им. Островского Н.А. в г. Ростове-на-Дону</div></div>
 			<div class="description">
+				<br>
 				Интерьер абонемента Библиотечно-информационного центра имени Н.А.Островского в г. Ростове-на-Дону <br>
 				<br>
 				Проектом предлагается создание многофункционального современного пространства, которое будет не только местом хранилища книг, а станет притягательным, просветительским и культурным центром.
@@ -130,7 +131,17 @@
 				<br>
 				Проектируемые помещения имеют ассиметричную форму. В помещениях была выполнена перепланировка для разделения пространства на зоны. Имеются внутренние перегородки, колонны и выступы несущих колонн.
 				<br>
-				<img src="images/8_4.jpg" alt="">
+				<img src="images/8_4.jpg" alt="" class="library_plan"> <br>
+				Освещение естественное и искусственное. <br>
+				Площадь помещения: <br>
+				– абонемент 37,93 м2; <br>
+				- читальный зал 62,85 м2. <br>
+				Высота помещений – 3,500 м. <br>
+				Подвесной потолок выполнен из деревянных панелей на металлических креплениях. <br>
+				Полы выполнены в одном уровне. <br>
+				Вход в читальный зал осуществляется через абонемент. В основу проектирования заложена функциональная схема зонирования пространств. Всё пространство делится на следующие зоны: входная зона, абонемент, читальная зона, компьютерная зона, гардеробная зона.
+				<img src="images/8_5.jpg" alt="" class="library_plan">
+				<div class="offset"></div>
 			</div>
 		</div>
 		<div class="nineth grid_item">
@@ -201,7 +212,10 @@
 		<img src="images/close.svg" alt="" class="close_button">
 		<div class="abs"><img src="" alt="" class="popup_add_image"></div>
 		<div class="slider"><div class="slider_circle"></div></div>
-		<div class="image_popup_text"></div>
+		<div class="image_popup_text_wrap">
+			<div class="image_popup_text"></div>
+		</div>
+
 	</div>
 	<div class="arrow larrow"><img width="30px" height="30px" src="images/larrow.svg" alt=""></div>
 	<div class="arrow rarrow"><img width="30px" height="30px" src="images/rarrow.svg" alt=""></div>
