--- a/index.html
+++ b/index.html
@@ -204,19 +204,24 @@
 			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
 			<div class="description"></div>
 		</div>
+		<div class="nineteenth grid_item">
+			<img class="grid_image" src="images/gif2.gif" alt="">
+			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+			<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
+			<div class="description"></div>
+		</div>
 	</div>
 
 	<div class="popup_bg"></div>
 	<div class="image_popup_wrap">
 		<img src="" alt="" class="popup_main_image">
-		<img src="images/close.svg" alt="" class="close_button">
 		<div class="abs"><img src="" alt="" class="popup_add_image"></div>
 		<div class="slider"><div class="slider_circle"></div></div>
 		<div class="image_popup_text_wrap">
 			<div class="image_popup_text"></div>
 		</div>
-
 	</div>
+	<img src="images/close.svg" alt="" class="close_button">
 	<div class="arrow larrow"><img width="30px" height="30px" src="images/larrow.svg" alt=""></div>
 	<div class="arrow rarrow"><img width="30px" height="30px" src="images/rarrow.svg" alt=""></div>
 </body>
