--- a/index.html
+++ b/index.html
@@ -77,7 +77,33 @@
 			<img class="grid_image" src="images/paramoni.png" alt="">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Парк-музей по ул. Береговая в г. Ростове-на-Дону</div></div>
-			<div class="description"></div>
+			<div class="description">
+				<div class="paramoni_menu">
+					<div class="paramoni_menu_item">
+						<img src="images/paramoni_menu_item1.jpg" alt=""  class="paramoni_menu_image">
+						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="paramoni_menu_content">1sfdfdsfdsfdsfsd</div>
+					</div>
+					<div class="paramoni_menu_item">
+						<img src="images/paramoni_menu_item2.jpg" alt="" class="paramoni_menu_image">
+						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="paramoni_menu_content">2fdsfdsfsdfds</div>
+					</div>
+					<div class="paramoni_menu_item">
+						<img src="images/paramoni_menu_item3.jpg" alt="" class="paramoni_menu_image">
+						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="paramoni_menu_content">3dsfdsfdsfds</div>
+					</div>
+					<div class="paramoni_menu_item">
+						<img src="images/paramoni_menu_item4.jpg" alt="" class="paramoni_menu_image">
+						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="paramoni_menu_content">4fdsgfdsgfd</div>
+					</div>
+				</div>
+				<div class="paramoni_chosen_menu_content">
+
+				</div>
+			</div>
 		</div>
 		<div class="second grid_item">
 			<img class="grid_image" src="images/1_1.jpg" alt="">
@@ -218,7 +244,9 @@
 		<div class="abs"><img src="" alt="" class="popup_add_image"></div>
 		<div class="slider"><div class="slider_circle"></div></div>
 		<div class="image_popup_text_wrap">
-			<div class="image_popup_text"></div>
+			<div class="image_popup_text">
+
+			</div>
 		</div>
 	</div>
 	<img src="images/close.svg" alt="" class="close_button">
