--- a/index.html
+++ b/index.html
@@ -78,26 +78,52 @@
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Парк-музей по ул. Береговая в г. Ростове-на-Дону</div></div>
 			<div class="description">
-				<div class="paramoni_menu">
-					<div class="paramoni_menu_item">
+				<div class="intro_menu_wrap">
+					<div class="paramoni_intro">Парк-музей по ул. Береговая в г. Ростове-на-Дону. <br>
+					Разработка данного проекта представляет собой концептуальное предложение по реновации архитектурных памятников «Комплекс Парамоновских складов» по ул.Береговая в г.Ростове-на-Дону с целью приспособления ветхих полуразрушенных строений для размещения в них помещений экспозиционного характера, параллельно с мероприятиями по благоустройству прилегающей территории и созданию на их базе городского парк-музея.</div>
+					<div class="paramoni_menu">
+						<div class="paramoni_menu_item">
 						<img src="images/paramoni_menu_item1.jpg" alt=""  class="paramoni_menu_image">
-						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
-						<div class="paramoni_menu_content">1sfdfdsfdsfdsfsd</div>
+						<div class="popup"><div class="popup_text">Концепция проекта</div></div>
+						<div class="paramoni_menu_content"> <pre class="paramoni_text_content">
+В процессе проектирования проводятся научно-исследовательские и экспериментальные работы, связанные с созданием технологических процессов и оборудования. Местной общественной организацией «Поток» были предоставлены материалы инженерных изысканий и обследований, обмерочные чертежи существующих на участке строительства зданий и сооружений. Нехватка материалов была дополнена самостоятельными обмерами. Был изучен отечественный и зарубежный опыт как реновации, так и организации музейной экспозиции.
+
+Основные цели и задачи концептуального подхода к освоению данной территории:
+⦁ Сохранение исторических строений с применением бережливых технологий – консервация, усиление существующих конструкций
+⦁ Тщательное изучение прилегающей территории и формирование научного заключения значимости данного места, его роли в историческом развитии прибрежной зоны города
+⦁ На основании выводов и отчетов, формирования задания, а в последствии и проекта реконструкции и реновации
+⦁ Разработка концепции должна проходить открыто, гласно с живым обсуждением принимаемых реновационных решений с получением окончательного решения, отвечающего на все поставленные вопросы.
+							.
+							.
+Одним из вариантов концептуального подхода является программа, представленная в данном решении.
+Проектом предлагается создание обширной реновационной зоны в составе которой должны входить:
+⦁ Парковая зона, оборудованная местами отдыха горожан с включением в ее состав набережной, неосвоенного зеленого пространства, сквера, прилегающего к территории.
+⦁ Пространство экспозиционного характера, созданное на базе памятников федерального значения , в состав которого входит музейная и временная экспозиции.
+
+Парамоновский комплекс наиболее подходит для размещения музея исходя из следующих выводов:
+⦁ В одном месте сконцентрированы памятники разных эпох: памятник федерального значения – пять зерновых складов 19 века; самое старинное уцелевшее здание Ростова – памятник «Склад портовой каменный конца 18 века» с началом подземного хода (который по нескольким признакам мог вести в крепость Димитрия Ростовского); часть территории по документам относится к крепости Димитрия Ростовского.
+⦁ Крайне удобное место расположения для туристов – центральное расположение участка на карте города, близлежащие набережная, сквер Седова, мост на левый берег Дона.
+⦁ Протекает большое количество древних родников, три из которых (единственные в Ростове) включены в ГосРеестр, причем до сих пор не определено их использование по назначению, в настоящее время родниковая чистая вода сливается в реку
+⦁ Установлено близкое расположение памятника археологии первых веков нашей эры «Ростовское городище», чей некрополь раскопали недавно на улице Станиславского.
+
+Все это указывает на бережное отношение к памятникам и прилегающей территории, обладающим по многим признакам исторической ценностью. Они насыщенны множеством культурных слоев, начиная от следов пребывания кочевых племен до современных поселений. Наиболее подходящим является возведение на территории легковозводимых конструкций, обладающих свойствами, необходимыми для строительства на исторической территории – легкостью, динамичностью, компактностью. Способ возведения легких строений не причинит вреда существующим раскопам. Экспозиция музея должна состоять не только из артефактов и документов, но и из исторических предметов, найденных на территории складов, с которыми посетители смогут иметь непосредственный контакт, приобщаясь к истории, что действует сильнее, нежели только визуальный и информационный ряд.</pre>
+						</div>
 					</div>
-					<div class="paramoni_menu_item">
+						<div class="paramoni_menu_item">
 						<img src="images/paramoni_menu_item2.jpg" alt="" class="paramoni_menu_image">
-						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="popup"><div class="popup_text">Конструктивное решение</div></div>
 						<div class="paramoni_menu_content">2fdsfdsfsdfds</div>
 					</div>
-					<div class="paramoni_menu_item">
+						<div class="paramoni_menu_item">
 						<img src="images/paramoni_menu_item3.jpg" alt="" class="paramoni_menu_image">
-						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="popup"><div class="popup_text">История</div></div>
 						<div class="paramoni_menu_content">3dsfdsfdsfds</div>
 					</div>
-					<div class="paramoni_menu_item">
+						<div class="paramoni_menu_item">
 						<img src="images/paramoni_menu_item4.jpg" alt="" class="paramoni_menu_image">
-						<div class="popup"><div class="popup_text">Галерея с постоянной выставкой на базе исторических строений</div></div>
+						<div class="popup"><div class="popup_text">Объемно-пространственная композиция</div></div>
 						<div class="paramoni_menu_content">4fdsgfdsgfd</div>
+					</div>
 					</div>
 				</div>
 				<div class="paramoni_chosen_menu_content">
