--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 			<h1>Золотарева Виктория</h1>
 			<h2 class="contacts_h2">Архитектор-дизайнер</h2>
 			<div class="contacts_element">
-				<img class="contacts_image" width="20px" height="20px" src="contactsimages/1.png" alt="">
+				<img class="contacts_image" width="20px" height="20px" src="contactsimages/2.png" alt="">
 				<p class="contacts_text">| E-mail: zolotareva.viktory@gmail.com</p>
 			</div>
 			<div class="contacts_element">
-				<img class="contacts_image" width="20px" height="20px" src="contactsimages/2.png" alt="">
+				<img class="contacts_image" width="20px" height="20px" src="contactsimages/1.png" alt="">
 				<p class="contacts_text">| WhatsApp: +7(901)589-10-97</p>
 			</div>
 			<div class="contacts_element">
@@ -79,6 +79,7 @@
 		</div>
 		<div class="first grid_item">
 			<img class="grid_image" src="images/paramoni.png" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Парк-музей по ул. Береговая в г. Ростове-на-Дону</div></div>
 			<div class="description">
@@ -89,7 +90,8 @@
 							Разработка данного проекта представляет собой концептуальное предложение по реновации архитектурных памятников «Комплекс Парамоновских складов» по ул.Береговая в г.Ростове-на-Дону с целью приспособления ветхих полуразрушенных строений для размещения в них помещений экспозиционного характера, параллельно с мероприятиями по благоустройству прилегающей территории и созданию на их базе городского парк-музея.</div>
 							<div class="paramoni_chosen_menu_content"></div>
 						</div>
-						<div class="paramoni_menu">
+						<div class="paramoni_menu_wrap">
+							<div class="paramoni_menu">
 							<div class="paramoni_menu_item">
 								<img src="images/paramoni_menu_item3.jpg" alt="" class="paramoni_menu_image">
 								<div class="popup"><div class="popup_text">История</div></div>
@@ -208,6 +210,7 @@
 								</div>
 							</div>
 						</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -250,6 +253,7 @@
 		</div>
 		<div class="eighth grid_item">
 			<img class="grid_image" src="images/8_2.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Библиотечно-информационный центр им. Островского Н.А. в г. Ростове-на-Дону</div></div>
 			<div class="description">
@@ -283,6 +287,7 @@
 		</div>
 		<div class="nineth grid_item">
 			<img class="grid_image" src="images/5.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Интерьер спальни с выходом на балкон</div></div>
 			<div class="description"></div>
@@ -295,30 +300,35 @@
 		</div>
 		<div class="eleventh grid_item">
 			<img class="grid_image" src="images/3.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Кухня в Новой Зеландии</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="twelveth grid_item">
 			<img class="grid_image" src="images/4.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="thirteenth grid_item">
 			<img class="grid_image" src="images/2.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Контрастная кухня с ярким цветовым акцентом</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fourteenth grid_item">
 			<img class="grid_image" src="images/6.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Интерьер с освещением "солнце сквозь облака"</div></div>
 			<div class="description"></div>
 		</div>
 		<div class="fifteenth grid_item">
 			<img class="grid_image" src="images/8.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Гостиная в Новой Зеландии</div></div>
 			<div class="description"></div>
@@ -337,6 +347,7 @@
 		</div>
 		<div class="eighteenth grid_item">
 			<img class="grid_image" src="images/7.1with.jpg" alt="">
+			<img src="images/interactive.svg" alt="" class="interactive">
 			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 			<div class="popup"><div class="popup_text">Обмеры особняка Лусегена Попова с последующим вычерчиванием в AutoCad</div></div>
 			<div class="description"></div>
