--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 </head>
 <body>
 
+	<!--preloader-->
+	<div class="preloader">
+		<img src="images/prealod.svg" class="preloader__image" alt="">
+	</div>
+
 	<!--contact-->
 	<div class="contacts">
 		<div class="contacts_container">
