--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa&display.." rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src='js/nprogress.js'></script>
+	<script>
+		$('body').show();
+		$('.version').text(NProgress.version);
+		NProgress.start();
+		setTimeout(function() { NProgress.done(); $('.fade').removeClass('out'); }, 1000);
+	</script>
+	<link rel='stylesheet' href='css/nprogress.css'/>
 	<title>Портфолио Золотарева Виктория</title>
 </head>
 <body>
@@ -48,18 +56,37 @@
 			г. Москва
 			<h3>Технические навыки</h3>
 			<div class="flex_container">
-				<div class="info_skills first_skill"></div>
-				<div class="info_skills second_skill"></div>
-				<div class="info_skills third_skill"></div>
-				<div class="info_skills fourth_skill"></div>
-				<div class="info_skills fifth_skill"></div>
-				<div class="info_skills sixth_skill"></div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/2.2.jpg">
+					<div class="skill_text">Autodesk 3ds Max</div>
+				</div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/6.2.jpg">
+					<div class="skill_text">Corona Render</div>
+				</div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/3.2.jpg">
+					<div class="skill_text">AutoCAD</div>
+				</div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/4.2.jpg">
+					<div class="skill_text">Adobe Photoshop</div>
+				</div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/5.2.jpg">
+					<div class="skill_text">Adobe Premier Pro</div>
+				</div>
+				<div class="info_skills">
+					<img class="skill_image" src="infimages/1.2.jpg">
+					<div class="skill_text">Microsoft Office</div>
+				</div>
 			</div>
 			<h3>О себе</h3>
 			<div class="about_me">
-				Дизайн - это та деятельность, что вдохновляет меня и позволяет реализовать творческий потенциал. Я активно заинтересована в получении профессионального опыта и постоянном развитии в данной сфере. Помимо профильного образования посещаю выставки, музеи, изучаю литературу в сфере дизайна и архитектуры.
-				Имею навыки создания рабочей документации, проведения замеров помещения, визуализации, коллажей, общения с заказчиком и ведения деловой переписки. Обладаю чувством стиля и цвета, образным мышлением. Разбираюсь в современных, классических и этнических стилях. Способна планировать функциональное, эргономичное и целостное пространство в соответствии с пожеланиями заказчика.
-				К увлечениям могу отнести фотографию, гончарное дело, активный отдых.
+				Дизайн - это та деятельность, что вдохновляет меня и позволяет реализовать творческий потенциал.
+				Я активно заинтересована в получении профессионального опыта и постоянном развитии в данной сфере.
+				Обладаю чувством стиля и цвета, образным мышлением. Разбираюсь в современных, классических и этнических стилях.
+				Способна планировать функциональное, эргономичное и целостное пространство в соответствии с пожеланиями заказчика.
 			</div>
 			<h3>Образование</h3>
 			<div class="education">
@@ -67,7 +94,7 @@
 				Ростовский-на-Дону строительный колледж <br> <br>
 				Архитектура (очно)<br> <br>
 				Донской государственный технический университет<br> <br>
-				Строительство (заочно)<br> <br>
+				Промышленное и гражданское строительство (заочно)<br> <br>
 				Дополнительное <br> <br>
 				ARHI.TECH - официальный тренинг-центр Autodesk и учебный центр GRAPHISOFT <br> <br>
 				Школа 3D-визуализации Ильи Изотова
@@ -76,7 +103,6 @@
 	</div>
 
 	<!--main content-->
-
 	<div class="grid_container">
 		<div class="buttons_container">
 			<div class="button open_info">О себе</div>
