--- a/index.html
+++ b/index.html
@@ -10,25 +10,19 @@
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://fonts.googleapis.com/css?family=Comfortaa&display.." rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<script src='node_modules/nprogress/nprogress.js'></script>
-	<link rel='stylesheet' href='node_modules/nprogress/nprogress.css'/>
-	<script>
-		$(document).on('turbolinks:click', function() {
-			console.log('test');
-			NProgress.start();
-		});
-		$(document).on('turbolinks:render', function() {
-			NProgress.done();
-			NProgress.remove();
-		});
-	</script>
+	<link rel="stylesheet" href="css/loading-bar.css">
+	<script src="js/loading-bar.js"></script>
 	<title>Портфолио Золотарева Виктория</title>
 </head>
-<body>
+<body class="loaded_hiding">
 
 	<!--preloader-->
 	<div class="preloader">
-		<img src="images/prealod.svg" class="preloader__image" alt="">
+		<div
+			class="ldBar label-center preloader__image"
+			data-value="35"
+			data-preset="circle"
+		></div>
 	</div>
 
 	<!--contact-->
