--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
 	<script src="js/loading-bar.js"></script>
 	<title>Портфолио Золотарева Виктория</title>
 </head>
-<body class="loaded_hiding">
+<body>
 
 	<!--preloader-->
 	<div class="preloader">
-		<div
-			class="ldBar label-center preloader__image"
-			data-value="0"
-			data-preset="circle"
+		<div id="ldBar" class="label-bottom"
+			 style="width:100%;height:60px",
+			 data-stroke="data:ldbar/res,gradient(0,1,#9df,#9fd,#df9,#fd9)",
+			 data-path="M10 20Q20 15 30 20Q40 25 50 20Q60 15 70 20Q80 25 90 20",
+			 data-value="0",
+			 data-fill-dir="ltr"
 		></div>
 	</div>
 
