--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="contacts">
 		<div class="contacts_container">
 			<h1>Золотарева Виктория</h1>
-			<h2 class="contacts_h2">Архитектор-дизайнер</h2>
+			<h2 class="contacts_h2">Дизайнер интерьера</h2>
 			<div class="contacts_element">
 				<img class="contacts_image" width="20px" height="20px" src="contactsimages/2.png" alt="">
 				<p class="contacts_text">| E-mail: zolotareva.viktory@gmail.com</p>
@@ -51,9 +51,9 @@
 	<div class="info">
 		<div class="info_container">
 			<h1>Золотарева Виктория</h1>
-			<h2>Архитектор-дизайнер</h2>
+			<h2>Дизайнер интерьера</h2>
 			<div class="info_image"></div>
-			г. Москва
+			23 года, г. Москва
 			<h3>Технические навыки</h3>
 			<div class="flex_container">
 				<div class="info_skills">
@@ -90,12 +90,10 @@
 			</div>
 			<h3>Образование</h3>
 			<div class="education">
-				Основное <br> <br>
-				Ростовский-на-Дону строительный колледж <br> <br>
-				Архитектура (очно)<br> <br>
-				Донской государственный технический университет<br> <br>
-				Промышленное и гражданское строительство (заочно)<br> <br>
-				Дополнительное <br> <br>
+				<span style="color: white">Основное</span> <br> <br>
+				Ростовский-на-Дону строительный колледж. Архитектура (очно)<br> <br>
+				Донской государственный технический университет. Промышленное и гражданское строительство (заочно)<br> <br>
+				<span style="color: white">Дополнительное</span> <br> <br>
 				ARHI.TECH - официальный тренинг-центр Autodesk и учебный центр GRAPHISOFT <br> <br>
 				Школа 3D-визуализации Ильи Изотова
 			</div>
@@ -255,6 +253,37 @@
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
+				<img class="grid_image" src="images/20.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">3D-визуализация детской по проекту Натальи Поповой</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/24.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Коллаж гостевого санузла</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/27.1.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Готовая тумба и техническое задание по эскизам Натальи Поповой</div></div>
+				<div class="description">
+					<div style="background-color: black;" class="library_description">
+						<div class="library_description_content">
+							<img src="images/27.2.jpg" alt="" class="library_plan">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/22.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">План расстановки мебели в студии в г. Ростова-на-Дону</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
 				<img class="grid_image" src="images/10.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Ручная графика.<br> Тушь.<br> Фрагмент 7х7 см</div></div>
@@ -323,6 +352,35 @@
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
+				<img class="grid_image" src="images/25.1with.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">3D-визуализация гостиной, г. Москва, ЖК "Прокшино"</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/29.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">План расстановки мебели и оборудованияв в квартире, г. Москва, ЖК "Прокшино"</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/19.3.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">3D-визуализации кухни-гостиной по проекту Натальи Поповой</div></div>
+				<div class="description">
+					<div style="background-color: black;" class="library_description">
+						<div class="library_description_content">
+							<img src="images/19.1.jpg" alt="" class="library_plan"> <br>
+							<img src="images/19.2.jpg" alt="" class="library_plan"> <br>
+							<img src="images/19.4.jpg" alt="" class="library_plan"> <br>
+							<img src="images/19.5.jpg" alt="" class="library_plan"> <br>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="grid_item">
 				<img class="grid_image" src="images/gif1.gif" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Функциональное зонирование мобильными стеклянными перегородками</div></div>
@@ -336,24 +394,17 @@
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
-			<img class="grid_image" src="images/4.1with.jpg" alt="">
-			<img src="images/interactive.svg" alt="" class="interactive">
-			<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-			<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
-			<div class="description"></div>
-		</div>
+				<img class="grid_image" src="images/4.1with.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Игра искуственного и дневного света в экстерьере</div></div>
+				<div class="description"></div>
+			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/8.1with.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">Гостиная в Новой Зеландии</div></div>
-				<div class="description"></div>
-			</div>
-			<div class="grid_item">
-				<img class="grid_image" src="images/7.1with.jpg" alt="">
-				<img src="images/interactive.svg" alt="" class="interactive">
-				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
-				<div class="popup"><div class="popup_text">Обмеры особняка Лусегена Попова с последующим вычерчиванием в AutoCad</div></div>
 				<div class="description"></div>
 			</div>
 		</div>
@@ -364,6 +415,34 @@
 				<div class="popup"><div class="popup_text">Галерея с временной экспозицией на базе исторических строений</div></div>
 				<div class="description"></div>
 			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/21.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">3D-визуализация спальни по проекту Натальи Поповой, КП "Зеленое подворье"</div></div>
+				<div class="description"></div>
+			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/23.jpg" alt="">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Коллаж зоны столовой</div></div>
+				<div class="description"></div>
+			</div>
+			<!-- <div class="grid_item">
+				<img class="grid_image" src="images/28.1.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Выполнение рабочей документации по проекту Натальи Поповой, КП "Зеленое подворье"</div></div>
+				<div class="description">
+					<div style="background-color: black;" class="library_description">
+						<div class="library_description_content">
+							<img src="images/28.2.jpg" alt="" class="library_plan"> <br>
+							<img src="images/28.3.jpg" alt="" class="library_plan"> <br>
+							<img src="images/28.4.jpg" alt="" class="library_plan"> <br>
+							<img src="images/28.5.jpg" alt="" class="library_plan"> <br>
+						</div>
+					</div>
+				</div>
+			</div> -->
 			<div class="grid_item">
 				<img class="grid_image" src="images/9.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
@@ -395,6 +474,13 @@
 				<div class="popup"><div class="popup_text">Спальня в этническом стиле</div></div>
 				<div class="description"></div>
 			</div>
+			<div class="grid_item">
+				<img class="grid_image" src="images/7.1with.jpg" alt="">
+				<img src="images/interactive.svg" alt="" class="interactive">
+				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
+				<div class="popup"><div class="popup_text">Обмеры особняка Лусегена Попова с последующим вычерчиванием в AutoCad</div></div>
+				<div class="description"></div>
+			</div>
 		</div>
 	</div>
 
@@ -407,8 +493,8 @@
 		</div>
 	</div>
 	<img src="images/close.svg" alt="" class="close_button">
-	<div class="arrow larrow"><img width="30px" height="30px" src="images/larrow.svg" alt=""></div>
-	<div class="arrow rarrow"><img width="30px" height="30px" src="images/rarrow.svg" alt=""></div>
+	<!-- <div class="arrow larrow"><img width="30px" height="30px" src="images/larrow.svg" alt=""></div>
+	<div class="arrow rarrow"><img width="30px" height="30px" src="images/rarrow.svg" alt=""></div> -->
 </body>
 <script src="js/index.js"></script>
 </html>
