--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
 				<div class="description"></div>
 			</div>
 			<div class="grid_item">
-				<img class="grid_image" src="images/25.1with.jpg" alt="">
+				<img class="grid_image" src="images/25.gif" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
 				<div class="popup"><div class="popup_text">3D-визуализация гостиной, г. Москва, ЖК "Прокшино"</div></div>
@@ -427,7 +427,7 @@
 				<div class="popup"><div class="popup_text">Коллаж зоны столовой</div></div>
 				<div class="description"></div>
 			</div>
-			<!-- <div class="grid_item">
+			<div class="grid_item">
 				<img class="grid_image" src="images/28.1.jpg" alt="">
 				<img src="images/interactive.svg" alt="" class="interactive">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
@@ -442,7 +442,7 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
+			</div>
 			<div class="grid_item">
 				<img class="grid_image" src="images/9.jpg" alt="">
 				<img width="20px" height="20px" class="magnifier" src="images/magnifier.svg" alt="">
